--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-python-can
-python-socketio
-eventlet
-python-dotenv
+python-can>=4.6.1
+python-socketio>=5.5.1
+eventlet>=0.40.4
+python-dotenv>=1.1.0
